--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <!-- Header -->
 <header>
   <h1>Learn R Programming</h1>
-  <p>Simple and easy R tutorial by Ismail Abdi</p>
+  <p>Simple and easy R tutorial by Yahye mohamed ymy</p>
 </header>
 
 <!-- Navigation -->
@@ -391,7 +391,7 @@ hist(data, main="Histogram", xlab="Values")</code></pre>
 
 <!-- Footer -->
 <footer>
-  <p>© 2025 Learn R by Ismail Abdi</p>
+  <p>© 2025 Learn R by Yahye mohamed ymy</p>
 </footer>
 
 <!-- Back to top button -->
